# Triangle-Simulator

./: .gitignore  .pre-commit-config.yaml  1_Demo_Interferometry_Simulation_and_TDI.ipynb  2_Demo_More_Advanced_Simulation.ipynb  3_Demo_GW_Injection.ipynb  Demo_Detailed_Interferometry_Simulation_and_TDI.ipynb  Demo_GW_Injection.ipynb  Demo_Interferometry_Simulation_and_TDI.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  setup.py
Examples/: 1_Demo_Interferometry_Simulation_and_TDI.ipynb  2_Demo_More_Advanced_Simulation.ipynb  3_Demo_GW_Injection.ipynb
Figures/: test.txt
OrbitData/LISALikeOrbitEclipticTCB/20280322_LISA_2p5Mkm/: LISANum.hdf5
OrbitData/LISALikeOrbitEclipticTCB/20280322_LISA_3Mkm/: TaijiNum.hdf5
OrbitData/MicroSateOrbitEclipticTCB/: MicroSateOrbit.hdf5
Tests/: CompareDifferentTimeDomainSimulations.ipynb  Compare_TDCSimulation_vs_FastMichResponse.ipynb  Sensitivities.ipynb  TargetedTDMCMC.ipynb  develop_fast_michelson_response.ipynb  test_data_recovery.ipynb  test_phenomT_waveform.ipynb  test_td_global_search.ipynb  test_td_global_search_test.ipynb  test_td_search.ipynb
Triangle/: Constants.py  Cosmology.py  Data.py  FFTTools.py  GW.py  Glitch.py  Interferometer.py  Noise.py  Offset.py  Orbit.py  Plot.py  TDI.py  TTL.py  __init__.py
Tutorials/: 1_Demo_Interferometry_Simulation_and_TDI.ipynb  1_Demo_Interferometry_and_TDI.ipynb  1_Demo_Laser_Interferometry_and_TDI.ipynb  2_Demo_More_Advanced_Noise_and_TDI_Simulation.ipynb  2_Demo_More_Advanced_Simulation.ipynb  3_Demo_GW_Injection.ipynb  4_Demo_EMRI_response.ipynb  4_Demo_Simulation_for_Scientific_Data_Analysis.ipynb  5_Demo_TDC_Data_Preprocessing.ipynb  5_Demo_TDC_Data_Usage.ipynb  HW_demo_Interferometry_Simulation_and_TDI.ipynb  Simulation_for_Scientific_Research.ipynb
