[project]
name = "Triangle"
version = "0.1.0"
description = "Space-based GW simulation software suite for triangular-constellation detectors"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL3" }
authors = [
  { name = "Minghui Du", email = "your.email@example.com" },
]
urls = { "Homepage" = "https://github.com/TriangleDataCenter/Triangle-Simulator" }

dependencies = [
  "numpy==1.26.4",
  "scipy==1.13.1",
  "matplotlib",
  "healpy==1.17.3",
  "PyCBC==2.7.2",
  "jupyter",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pre-commit",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 248
target-version = ["py36", "py37", "py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 248
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = ["C901", "E203", "E402", "E501", "E711", "E741", "E731", "F401", "F402", "F403", "F405", "F841"]
select = ["E", "F", "W", "C90"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv]
concurrent-downloads = 20
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
